devOps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-store-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /banner/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: banners-server-service-external
                port:
                  number: 5000
          - path: /banner(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: banners-client-service-external
                port:
                  number: 80
          - path: /erp/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: erp-server-service-external
                port:
                  number: 5000
          - path: /erp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: erp-client-service-external
                port:
                  number: 80
          - path: /oms/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oms-server-service-external
                port:
                  number: 5000
          - path: /oms(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: oms-client-service-external
                port:
                  number: 80
          - path: /store/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-server-service-external
                port:
                  number: 5000
          - path: /store(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-client-service-external
                port:
                  number: 80
          - path: /argocd
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server-service-external
                port:
                  number: 80
